crates/lexing/tests/snapshots/lexer__hole_glued.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    HOLE,
    WHITESPACE,
    HOLE,
    WHITESPACE,
    HOLE,
    WHITESPACE,
    HOLE,
    WHITESPACE,
    HOLE,
    WHITESPACE,
    HOLE,
    WHITESPACE,
    HOLE,
    WHITESPACE,
    HOLE,
    WHITESPACE,
    HOLE,
    WHITESPACE,
    HOLE,
    END_OF_FILE,
]
