crates/lexing/tests/snapshots/lexer__hole_operator.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    OPERATOR,
    WHITESPACE,
    OPERATOR,
    WHITESPACE,
    OPERATOR,
    END_OF_FILE,
]
