crates/lexing/tests/snapshots/lexer__hole_unglued.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    OPERATOR,
    WHITESPACE,
    LOWER,
    END_OF_FILE,
]
