crates/lexing/tests/snapshots/lexer__integer_hex.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    INTEGER,
    END_OF_FILE,
]
