crates/lexing/tests/snapshots/lexer__integer_hex_detached.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    INTEGER,
    LOWER,
    END_OF_FILE,
]
