crates/lexing/tests/snapshots/lexer__keyword.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    ADO,
    WHITESPACE,
    AS,
    WHITESPACE,
    CASE,
    WHITESPACE,
    CLASS,
    WHITESPACE,
    DATA,
    WHITESPACE,
    DERIVE,
    WHITESPACE,
    DO,
    WHITESPACE,
    ELSE,
    WHITESPACE,
    FALSE,
    WHITESPACE,
    FOREIGN,
    WHITESPACE,
    HIDING,
    WHITESPACE,
    IF,
    WHITESPACE,
    IMPORT,
    WHITESPACE,
    IN,
    WHITESPACE,
    INFIX,
    WHITESPACE,
    INFIXL,
    WHITESPACE,
    INFIXR,
    WHITESPACE,
    INSTANCE,
    WHITESPACE,
    LET,
    WHITESPACE,
    MODULE,
    WHITESPACE,
    NEWTYPE,
    WHITESPACE,
    OF,
    WHITESPACE,
    THEN,
    WHITESPACE,
    TRUE,
    WHITESPACE,
    TYPE,
    WHITESPACE,
    WHERE,
    END_OF_FILE,
]
